--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -32,6 +32,12 @@
 \definecolor{light-blue}{rgb}{0.7,0.7,0.9}
 \definecolor{dark-blue}{rgb}{0.2,0.2,0.5}
 
+\definecolor{codeblue}{rgb}{0.5,0.5,0.7}
+\definecolor{codegreen}{rgb}{0,0.6,0}
+\definecolor{codegray}{rgb}{0.5,0.5,0.5}
+\definecolor{codepurple}{rgb}{0.58,0,0.82}
+\definecolor{backcolour}{rgb}{0.95,0.95,0.92}
+
 %code
 \usepackage{listings}
 \lstset{
@@ -45,6 +51,7 @@
     stringstyle=\rmfamily\slshape\color[RGB]{128,0,0},   
     showstringspaces=false,                                                          
     basicstyle=\small\ttfamily, %\scriptsize%\tiny%\footnotesize  
+    belowcaptionskip=0.5\baselineskip,
     breaklines=true
 }
 
