Rewrite medium input and fix minor issues in other chap.

--- a/doc/USER_MANUAL/grid.tex
+++ b/doc/USER_MANUAL/grid.tex
@@ -1,4 +1,4 @@
-\chapter{Grid}\label{chapter-grid}
+\chapter{Generation of Computational Grid}\label{chapter-grid}
 
 \begin{lstlisting}[language=python, title=run\_test.sh, frame=tb]
   "#grid_generation_method" : {
