--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -144,7 +144,7 @@
 %\par\end{center}
 
 
-\title{\textbf{CGFD3D-elastic}\\
+\title{\textbf{CGFD3D acoustic/elastic/visco-elastic}\\
        \textbf{User Manual}}
  
 
