--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -26,6 +26,9 @@
 \usepackage{mathrsfs}
 \usepackage[colorlinks, citecolor=blue, linkcolor=black, anchorcolor=black]{hyperref}
 \usepackage[dvipsnames,usenames]{xcolor}
+
+\usepackage[list=true]{subcaption}
+
 % colors to show the corrections
 \definecolor{light-gray}{rgb}{0.7,0.7,0.7}
 \definecolor{dark-gray}{rgb}{0.1,0.1,0.3}
@@ -144,7 +147,7 @@
 %\par\end{center}
 
 
-\title{\textbf{CGFD3D acoustic/elastic/visco-elastic}\\
+\title{\textbf{CGFD3D Seismic Wave Simulation Program}\\
        \textbf{User Manual}}
  
 
