--- a/doc/USER_MANUAL/source.tex
+++ b/doc/USER_MANUAL/source.tex
@@ -61,9 +61,9 @@ There are total three paramters in the .json file related to the source input:
 Currently, only \verb|in_source_file| is implemented and the other two have no effect yet.
 
 \begin{lstlisting}[language=json, title=Example of source settings in .json, frame=tb]
-   "in_source_file" : "$INPUTDIR/test.src",
+   "in_source_file" : "/home/user/prj/input/test.src",
    "is_export_source" : 1,
-   "source_export_dir" : "$SOURCE_DIR",
+   "source_export_dir" : "/home/user/prj/output",
 \end{lstlisting}
 
 
