Rename grid/source/media tex file to start with chap_.

--- a/doc/USER_MANUAL/manual_CGFD3D.tex
+++ b/doc/USER_MANUAL/manual_CGFD3D.tex
@@ -174,11 +174,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %\include{01_introduction}
-\include{grid}
+\include{chap_grid}
 
-\include{07_media}
+\include{chap_media}
 
-\include{source}
+\include{chap_source}
 
 \include{copyright}
 
